updated icon and create user groups

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--Link to icon source: https://www.flaticon.com/authors/freepik-->
+    <meta description="shortcut icon provided by freeipk @ https://www.flaticon.com/authors/freepik"
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <title>Chase Your Dreams</title>
   </head>
   <body>
