--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
     <!--Link to icon source: https://www.flaticon.com/authors/freepik-->
     <meta description="shortcut icon provided by freeipk @ https://www.flaticon.com/authors/freepik"
     <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <title>Chase Your Dreams</title>
   </head>
   <body>
