--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--Link to icon source: https://www.flaticon.com/authors/freepik-->
-    <meta description="shortcut icon provided by freeipk @ https://www.flaticon.com/authors/freepik"
-    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <title>Chase Your Dreams</title>
   </head>
